# KongkongLibrary

./: .gitattributes  .gitignore  スペニット.txt
projects/apple-clang/: build.sh
projects/apple-gcc/: build.sh
projects/linux-gcc/: build.sh
projects/other/: CMakeLists.txt
projects/windows-gcc/: Build.bat
projects/windows-visualstudio/KongkongLibrary/: KongkongLibrary.sln
src/cpp/: All.cpp  All.h  All.mm
src/cpp/Definitions/: Kongkong.Algorithms.Othello.OthelloElement.cpp  Kongkong.Algorithms.Othello.OthelloField.cpp  Kongkong.Algorithms.RadixConverter.cpp  Kongkong.Algorithms.Range.cpp  Kongkong.Algorithms.Sudoku.Std.cpp  Kongkong.Algorithms.Sudoku.SudokuElement.cpp  Kongkong.Algorithms.Sudoku.SudokuField.cpp  Kongkong.AppleDevice.AppKit.NSColor.mm  Kongkong.AppleDevice.Foundation.Collections.ArrayWrapperBase.cpp  Kongkong.AppleDevice.Foundation.Collections.EnumeratorWrapperBase.cpp  Kongkong.AppleDevice.Foundation.Collections.NSArray.mm  Kongkong.AppleDevice.Foundation.Collections.NSDictionary.mm  Kongkong.AppleDevice.Foundation.Collections.NSEnumerator.mm  Kongkong.AppleDevice.Foundation.Collections.NSMutableArray.mm  Kongkong.AppleDevice.Foundation.Collections.NSNull.mm  Kongkong.AppleDevice.Foundation.FileSystem.NSFileManager.mm  Kongkong.AppleDevice.Foundation.NSData.mm  Kongkong.AppleDevice.Foundation.NSDebug.mm  Kongkong.AppleDevice.Foundation.NSDecimal.mm  Kongkong.AppleDevice.Foundation.NSDecimalNumber.mm  Kongkong.AppleDevice.Foundation.NSError.mm  (+282 more)
src/include/klib/: Kongkong.Bits.h  (+51 more)
src/metal/: All.metal  Kongkong.Graphics.Imaging.BitmapImage.metal
(+500 files in other folders)
